feat: add route to delete and update short url
